# oxiaudio

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md  deny.toml
crates/oxiaudio/: Cargo.toml  README.md  TODO.md
crates/oxiaudio-core/: Cargo.toml  README.md  TODO.md
crates/oxiaudio-core/benches/: buffer_bench.rs
crates/oxiaudio-core/src/: buffer.rs  clock.rs  error.rs  format.rs  ipc.rs  layout.rs  lib.rs  metadata.rs  pipeline.rs  ring.rs  sample.rs  traits.rs
crates/oxiaudio-decode/: Cargo.toml  README.md  TODO.md
crates/oxiaudio-decode/src/: aac_decoder.rs  aiff.rs  artwork.rs  au.rs  cue.rs  detect.rs  gapless.rs  lib.rs  midi.rs  midi_synth.rs  mmap.rs  musepack.rs  ogg_reader.rs  opus.rs  raw.rs  replaygain.rs  streaming.rs  wav_cue.rs  wavpack.rs
crates/oxiaudio-decode/tests/: m23_decode.rs  m2_probe.rs  m3_streaming.rs  m6_decode.rs  m9_streaming.rs
crates/oxiaudio-dsp/: Cargo.toml  README.md  TODO.md
crates/oxiaudio-dsp/benches/: dsp_bench.rs
crates/oxiaudio-dsp/src/: biquad.rs  chain.rs  dasp_adapter.rs  dither.rs  dynamics.rs  filters.rs  filters_fir.rs  filters_iir.rs  lib.rs  loudness.rs  noise.rs  pitch.rs  pvocoder.rs  rhythm.rs  segment.rs  spectral.rs  stereo.rs
crates/oxiaudio-dsp/src/effects/: functions.rs  mod.rs  trait_impls.rs  types.rs
crates/oxiaudio-encode/: Cargo.toml  README.md  TODO.md
crates/oxiaudio-encode-mp3-lame/: Cargo.toml  README.md  TODO.md
crates/oxiaudio-encode-mp3-lame/benches/: mp3_bench.rs
crates/oxiaudio-encode-mp3-lame/src/: lib.rs
crates/oxiaudio-encode-mp3-lame/src/lame/: encoder.rs  id3v2.rs  lame_tests.rs  mod.rs  stream.rs  types.rs
crates/oxiaudio-encode-mp3-lame/tests/: m23_mp3.rs  m2_mp3.rs  m3_vbr_id3.rs  m4_streaming.rs  m6_presets.rs
crates/oxiaudio-encode/benches/: encode_bench.rs
crates/oxiaudio-encode/src/: aac.rs  aac_m4a.rs  aiff.rs  apev2.rs  au.rs  flac_core.rs  flac_meta.rs  flac_picture.rs  flac_streaming.rs  id3.rs  lib.rs  ogg.rs  opus_celt.rs  opus_celt_tables.rs  opus_encoder.rs  opus_hybrid.rs  opus_hybrid_conform.rs  opus_mdct.rs  opus_pvq.rs  opus_range.rs  opus_silk.rs  opus_silk_conform.rs  vorbis.rs  wav_core.rs  wav_cue.rs  wav_ext.rs
crates/oxiaudio-encode/tests/: m23_encode.rs  m2_flac.rs  m9_encode.rs  m_aac_roundtrip.rs  m_encode_to_file.rs  m_opus_celt_conformance.rs  m_opus_conformant_optin.rs  m_opus_hybrid_conformance.rs  m_opus_silk_conformance.rs  m_oxisound_pipeline.rs  m_roundtrip.rs
crates/oxiaudio-integration-tests/: Cargo.toml
crates/oxiaudio-integration-tests/benches/: decode_bench.rs
crates/oxiaudio-integration-tests/src/: lib.rs
crates/oxiaudio-integration-tests/tests/: inline_aac_roundtrip.rs  inline_au_roundtrip.rs  inline_flac_streaming_roundtrip.rs  inline_m4a_roundtrip.rs  inline_wav_cue.rs  m10_decode.rs  m11_flac_config.rs  m12_wav_config.rs  m3_bitdepth.rs  m4_streaming.rs  m6_features.rs  m_vorbis_roundtrip.rs
crates/oxiaudio/benches/: facade_bench.rs
crates/oxiaudio/src/: decode.rs  dsp.rs  encode.rs  lib.rs  pipeline.rs
crates/oxiaudio/tests/: m10_facade.rs  m11_facade.rs  m13_facade.rs  m20_integration.rs  m23_facade_dsp.rs  m23_roundtrip.rs  m2_facade.rs  m9_facade.rs  m_pipeline.rs  m_stream_pitch.rs
scripts/: ffi-audit.sh
