[package]
name = "oxiaudio"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "OxiAudio — COOLJAPAN Pure-Rust audio codec + DSP facade"
categories = ["multimedia::audio"]
keywords = ["audio", "codec", "pure-rust", "cooljapan", "oxiaudio"]

[features]
default = ["pure"]
pure = [
    "dep:oxiaudio-decode",
    "dep:oxiaudio-encode",
    "dep:oxiaudio-dsp",
    "dep:rayon",
]
serde = ["oxiaudio-core/serde"]

[dependencies]
oxiaudio-core            = { workspace = true }
oxiaudio-decode          = { workspace = true, optional = true }
oxiaudio-encode          = { workspace = true, optional = true }
oxiaudio-dsp             = { workspace = true, optional = true }
rayon                    = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "facade_bench"
harness = false
